--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.5.1",
     "sequelize": "^4.28.7",
+    "sequelize-cli": "^3.2.0",
     "serve-favicon": "~2.4.5"
   }
 }
