データベースの内容を表示中

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "mysqlmysql",
+    "password": null,
     "database": "hands_on_node_app",
     "host": "127.0.0.1",
     "dialect": "mysql"
